--- a/Anomaly_Detection_in_MINST_Dataset.ipynb
+++ b/Anomaly_Detection_in_MINST_Dataset.ipynb
@@ -537,6 +537,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c1abaeaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_curve, confusion_matrix, classification_report\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- ROC Curve and Best Threshold ---\n",
+    "fpr, tpr, thresholds = roc_curve(y_true, mse)\n",
+    "j_scores = tpr - fpr\n",
+    "best_idx = np.argmax(j_scores)\n",
+    "best_threshold = thresholds[best_idx]\n",
+    "\n",
+    "print(f\"✅ Best Threshold (Youden’s J): {best_threshold:.6f}\")\n",
+    "print(f\"TPR: {tpr[best_idx]:.4f}, FPR: {fpr[best_idx]:.4f}\")\n",
+    "\n",
+    "# --- Plot ROC Curve ---\n",
+    "plt.figure()\n",
+    "plt.plot(fpr, tpr, label=f\"ROC Curve (AUC={roc_score:.4f})\")\n",
+    "plt.plot([0,1],[0,1],'--')\n",
+    "plt.xlabel(\"False Positive Rate\")\n",
+    "plt.ylabel(\"True Positive Rate\")\n",
+    "plt.title(\"ROC Curve - MNIST Anomaly Detection\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "# --- Binary predictions using best threshold ---\n",
+    "y_pred_opt = (mse > best_threshold).astype(int)\n",
+    "\n",
+    "# --- Confusion Matrix ---\n",
+    "cm = confusion_matrix(y_true, y_pred_opt)\n",
+    "plt.figure()\n",
+    "sns.heatmap(cm, annot=True, fmt='d', cmap=\"Blues\", xticklabels=[\"Normal\",\"Anomaly\"], yticklabels=[\"Normal\",\"Anomaly\"])\n",
+    "plt.title(\"Confusion Matrix (Best Threshold)\")\n",
+    "plt.xlabel(\"Predicted\")\n",
+    "plt.ylabel(\"Actual\")\n",
+    "plt.show()\n",
+    "\n",
+    "# --- Classification Report ---\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_true, y_pred_opt))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "0f9aecec-3b6f-422d-a1bd-fb58997881c8",
    "metadata": {},
